// Vitest Snapshot v1

exports[`EAvatar > EAvatar snapshot 1`] = `
"<div class=\\"eu-avatar md\\">
  <!---->
  <!---->
  <!---->
</div>"
`;

exports[`EAvatar > should work with \`props\` 1`] = `
"<div class=\\"eu-avatar md\\">EAvatar
  <!---->
  <!---->
</div>"
`;
